# notionwiki

./: .gitignore  .npmignore  CLAUDE.md  LICENSE  README.md  llm_wiki.md  package-lock.json  package.json  prompt.md  pyproject.toml
.github/workflows/: publish-npm.yml
docs/: design.md
scripts/: bootstrap.js  postinstall.js
src/notion_wiki/: __init__.py  cli.py  config.py  daemon.py  paths.py  raw_index.py  token.py
src/notion_wiki/convert/: assets.py  blocks.py  database.py
src/notion_wiki/graph/: graph_gen.py  index_gen.py  lint.py  scanner.py  server.py
src/notion_wiki/ingest/: daemon_log.py  poller.py  pull.py  scope.py  writer.py
src/notion_wiki/notion/: client.py  models.py  rate_limit.py
src/notion_wiki/schedule/: base.py  linux.py  macos.py  windows.py
src/notion_wiki/store/: archive.py  db.py  lock.py
tests/: fakes.py  test_cli_banner.py  test_cli_daemon.py  test_cli_graph_lint.py  test_cli_init_service.py  test_cli_open.py  test_cli_pull_status.py  test_config.py  test_convert_assets.py  test_convert_blocks.py  test_convert_database.py  test_daemon.py  test_daemon_log.py  test_graph_gen.py  test_graph_server.py  test_ingest_pull.py  test_ingest_writer.py  test_lint.py  test_notion_client.py  test_notion_models.py  test_raw_index.py  test_schedule.py  test_scope.py  test_store_archive.py  test_store_db.py  test_store_lock.py
