[project]
name = "notionwiki"
version = "0.1.2"
description = "One-way ingestion bridge: pulls a Notion workspace into the raw layer of an LLM Wiki"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "keyring>=25.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "tomli-w>=1.0",
    "questionary>=2.0",
]

[project.optional-dependencies]
graph = ["fastapi>=0.110", "uvicorn>=0.29"]
daemon = ["apscheduler>=3.10"]

[project.scripts]
notionwiki = "notion_wiki.cli:main"
nw = "notion_wiki.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notion_wiki"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
